--- a/ItemFilter.yaml
+++ b/ItemFilter.yaml
@@ -71,11 +71,11 @@ x-bases:
 
 # This ring rule will show all unidentified magic, rare, and unique rings that drop on the ground
 Ring:
-  - Qualities: [magic, rare, unique]
+  - Qualities: [rare, unique]
   # The rings below have stats that are only possible on identified items, so these rules
   # will alert you when a matching item is identified by you or picked up as identified
-  - Qualities: magic
-    Min Area Level: 85
+  #- Qualities: magic
+  #  Min Area Level: 85
   - Qualities: magic
     Magic Find: 40
   - Qualities: magic
